--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@types/react-dom": "^17.0.11",
         "@types/styled-components": "^5.1.21",
         "aws-amplify": "^4.3.12",
+        "leva": "^0.9.21",
         "paper": "^0.12.15",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
