--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react-dom": "^17.0.2",
         "react-scripts": "5.0.0",
         "react-spring": "^9.4.2",
+        "react-toastify": "^8.2.0",
         "styled-components": "^5.3.3",
         "typescript": "^4.5.4",
         "web-vitals": "^2.1.3",
